--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -160,4 +160,41 @@ input[type=submit]:hover {
     display: none;
 }
 
+
+.modal{
+    display: none;
+    position: fixed;
+    overflow: auto;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+
+}
+
+.modal-content{
+    border: 1px solid #888;
+    width: 80%;
+    padding: 20px;
+    margin: auto;
+    background-color: #fefefe;
+}
+
+.close{
+    float: right;
+    font-size: 28px;
+    font-width: bold;
+    color: #aaaaaa;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    cursor: pointer;
+    text-direction: none;
+}
 /* End Error Message Style */
